# DFAMSynth

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Envelope.cpp  Envelope.h  LadderFilter.cpp  LadderFilter.h  NoiseGenerator.cpp  NoiseGenerator.h  Oscillator.cpp  Oscillator.h
Source/Sequencer/: Sequencer.cpp  Sequencer.h
